--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'io.github.nullptrx.pangleflutter'
 version '2.0.1'
 
 buildscript {
-    ext.kotlin_version = '[1.3.40,1.8.10]'
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
